Added sound auto complete